--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -5,7 +5,7 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Curso </th>
+    <th mat-header-cell *matHeaderCellDef> Home-Curso </th>
     <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
   </ng-container>
 
