--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,3 +1,11 @@
+<!--<mat-card class="top"><span>RODRIGO COSTA</span></mat-card>
+-->
+<mat-card>
+
+  <mat-toolbar color="primary">
+   Cursos Disponíveis
+  </mat-toolbar>
+
 <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
@@ -9,25 +17,21 @@
     <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
   </ng-container>
 
-  <!-- Name Column -->
+  <!-- Category Column -->
   <ng-container matColumnDef="category">
     <th mat-header-cell *matHeaderCellDef> Categoria </th>
     <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
   </ng-container>
 
-  <!-- Weight Column
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+ <!--  Weight Column -->
+  <ng-container matColumnDef="turno">
+    <th mat-header-cell *matHeaderCellDef> Manha </th>
+    <td mat-cell *matCellDef="let course"> {{ course.turno }} </td>
   </ng-container>
 
-  Symbol Column
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container>-->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</mat-card>
 
