--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -8,3 +8,10 @@ table {
     align-items: center;
     justify-content: center;
   }
+
+  .loading-spinner{
+    background: rgba(0,0,0,0.15);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
