--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,37 +1,39 @@
 <!--<mat-card class="top"><span>RODRIGO COSTA</span></mat-card>
 -->
 <mat-card>
-
-  <mat-toolbar color="primary">
-   Cursos Disponíveis
-  </mat-toolbar>
-
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
+  <mat-toolbar color="primary"> Cursos Disponíveis </mat-toolbar>
+  <div *ngIf="courses$ | async as courses; else loading">
+    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+      <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Home-Curso </th>
-    <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-  </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Home-Curso</th>
+        <td mat-cell *matCellDef="let course">{{ course.name }}</td>
+      </ng-container>
 
-  <!-- Category Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> Categoria </th>
-    <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-  </ng-container>
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+      </ng-container>
 
- <!--  Weight Column -->
-  <ng-container matColumnDef="turno">
-    <th mat-header-cell *matHeaderCellDef> Manha </th>
-    <td mat-cell *matCellDef="let course"> {{ course.turno }} </td>
-  </ng-container>
+      <!--  Weight Column -->
+      <ng-container matColumnDef="turno">
+        <th mat-header-cell *matHeaderCellDef>Manha</th>
+        <td mat-cell *matCellDef="let course">{{ course.turno }}</td>
+      </ng-container>
 
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
+
 </mat-card>
-
